--- a/DairyProject/templates/inc/navbar.html
+++ b/DairyProject/templates/inc/navbar.html
@@ -1,11 +1,12 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+    
     <body>
 <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
-            <a href="{%  url 'home' %}" class="navbar-brand d-flex align-items-center">
+            <!--a href="{%  url 'home' %}" class="navbar-brand d-flex align-items-center">
             <img class="img-fluid" src="{% static '/img/logo.jpg' %}" height="200" width="100" alt="Logo">
-    </a>
+    </a-->
     <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,10 +14,10 @@
         <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="{%  url 'home' %}"class="nav-item nav-link active">Home</a>
             <a href="{% static '/about.html' %}" class="nav-item nav-link">About</a>
-            <a href="{% url 'login' %}" class="nav-item nav-link">Login</a>
+            <!--a href="{% url 'login' %}" class="nav-item nav-link">Login</a-->
 
             <a href="{% static '/service.html' %}" class="nav-item nav-link">Products</a>
-            <a href="{% url 'registration' %}" class="nav-item nav-link">Registration</a>
+            <!--a href="{% url 'registration' %}" class="nav-item nav-link">Registration</a-->
 
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Todays Rate</a>
@@ -28,11 +29,11 @@
                     <a  class="dropdown-item">Paneer----100/-</a>
                 </div>
             </div>
-            <a href="{% static '/contact.html' %}" class="nav-item nav-link">Contact</a>
+            <!--a href="{% static '/contact.html' %}" class="nav-item nav-link">Contact</a-->
         </div>
-        <div class="border-start ps-4 d-none d-lg-block">
+        <!--div class="border-start ps-4 d-none d-lg-block">
             <button type="button" class="btn btn-sm p-0"><i class="fa fa-search"></i></button>
-        </div>
+        </div-->
     </div>
 </nav>
 </body>
