--- a/DairyProject/templates/layout/main.html
+++ b/DairyProject/templates/layout/main.html
@@ -42,25 +42,25 @@
    
 
     <!-- Topbar Start -->
-    <div class="container-fluid bg-dark px-0">
+    <!--div class="container-fluid bg-white px-0">
         <div class="row g-0 d-none d-lg-flex">
             <div class="col-lg-6 ps-5 text-start">
-                <div class="h-100 d-inline-flex align-items-center text-light">
+                <div class="h-100 d-inline-flex align-items-center text-blue">
                     <span>Follow Us:</span>
-                    <a class="btn btn-link text-light" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-link text-light" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-link text-light" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-link text-light" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-link text-blue" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-link text-blue" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-link text-blue" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-link text-blue" href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-6 text-end">
-                <div class="h-100 bg-secondary d-inline-flex align-items-center text-dark py-2 px-4">
+                <div class="h-100 bg-white d-inline-flex align-items-center text-dark py-2 px-4">
                     <span class="me-2 fw-semi-bold"><i class="fa fa-phone-alt me-2"></i>Call Us:</span>
-                    <span>+012 345 6789</span>
+                    <span>+9876756565</span>
                 </div>
             </div>
         </div>
-    </div>
+    </div-->
     <!-- Topbar End -->
 
 <!-- Navbar Start -->
@@ -76,38 +76,38 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="{% static '/img/login.jpg' %}" alt="Image">
+                    <img class="w-100" src="{% static '/img/6.jpg' %}" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-lg-8 text-start">
-                                    <p class="fs-4 text-white">Welcome to our dairy farm</p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInRight">The Farm of Dairy products</h1>
-                                    <a href= "" class="btn btn-secondary rounded-pill py-3 px-5 animated slideInRight">Explore More</a>
+                                    <p class="fs-4 text-darkblue">Welcome to our dairy farm</p>
+                                    <h1 class="display-1 text-darkblue mb-5 animated ">The Farm of Dairy products</h1>
+                                    <a href="{% url 'login' %}" class="btn btn-secondary rounded-pill py-3 px-5  ">Login</a>
+                                    <a href="{% url 'registration' %}" class="btn btn-secondary rounded-pill py-3 px-5  ">Register</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img class="w-100" src="{% static '/img/dash.jpg' %}" alt="Image">
+                <!--div class="carousel-item">
+                    <img class="w-100" src="{% static '/img/6.jpg' %}" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-end">
                                 <div class="col-lg-8 text-end">
-                                    <p class="fs-4 text-white">Welcome to our dairy farm</p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInRight">Best Organic Dairy Products</h1>
-                                    <a href= "" class="btn btn-secondary rounded-pill py-3 px-5 animated slideInLeft">Explore More</a>
+                                    <p class="fs-4 text-darkblue">Welcome to our dairy farm</p>
+                                    <h1 class="display-1 text-darkblue mb-5 animated ">Best Organic Dairy Products</h1>
+                                    <a href="{% url 'login' %}" class="btn btn-secondary rounded-pill py-3 px-5 ">Login</a>
+                                    <a href="{% url 'registration' %}" class="btn btn-secondary rounded-pill py-3 px-5 ">Register</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                
-
+                </div-->
             </div>
-
-            <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel"
+    
+            <!--button class="carousel-control-prev" type="button" data-bs-target="#header-carousel"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -116,9 +116,10 @@
                 data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
-            </button>
+            </button-->
         </div>
     </div>
+    
     <!-- Carousel End -->
 
    
@@ -562,13 +563,13 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-light  footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-white mb-4">Our Office</h5>
+                    <h5 class="text-blue mb-4">Our Office</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, Kottayam, Kerala</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>6238097111</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>dairysync@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
@@ -578,7 +579,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-white mb-4">Quick Links</h5>
+                    <h5 class="text-blue mb-4">Quick Links</h5>
                     <a class="btn btn-link" href="">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
                     <a class="btn btn-link" href="">Our Services</a>
@@ -586,14 +587,14 @@
                     <a class="btn btn-link" href="">Support</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-white mb-4">Milk Availability time</h5>
+                    <h5 class="text-blue mb-4">Milk Availability time</h5>
                     <p class="mb-1">Sunday-Saturday</p>
                     <h6 class="text-light">06:00 am - 08:00 Am</h6>
                     <p class="mb-1">Afternoon</p>
                     <h6 class="text-light">03:00 pm - 05:00 pm</h6>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-white mb-4">Newsletter</h5>
+                    <h5 class="text-blue mb-4">Newsletter</h5>
                     <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                     <div class="position-relative w-100">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="dairysync@gmail.com">
@@ -607,7 +608,7 @@
 
 
     <!-- Copyright Start -->
-    <div class="container-fluid bg-secondary text-body copyright py-4">
+    <div class="container-fluid bg-blue text-body copyright py-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
